--- a/scss/componants/_nav.scss
+++ b/scss/componants/_nav.scss
@@ -10,7 +10,8 @@ nav {
 
 .menu {
 	display: inline-block;
-	cursor: pointer;
+  cursor: pointer;
+  padding: 20px;
 }
 
 .top,
@@ -25,7 +26,7 @@ nav {
 }
 
 .changeTop {
-	transform: rotate(-405deg)  translate(-10px, 7px);
+	transform: rotate(-405deg)  translate(-11px, 10px);
 	width: 40px;
 }
 
@@ -34,7 +35,7 @@ nav {
 }
 
 .changeBot {
-	transform: rotate(405deg)  translate(-9px, -9px);
+	transform: rotate(405deg)  translate(-10px, -10px);
 	width: 40px;
 }
 
